# product-highlighted-api

./: Cargo.toml  README.md  diesel.toml
migrations/2024-09-23-121510_products_highlighted/: down.sql  up.sql
src/: api.rs  config.rs  db.rs  error.rs  main.rs  schema.rs
