[package]
name = "product-highlighted-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# Clients API
reqwest = {version="0.12", default-features=false}
doli-client-api-rs = {git = "https://github.com/Cyrix126/doli-client-api-rs"}
# configuration file
get_pass = {git = "https://github.com/Cyrix126/get_pass"}
confy = "0.6"
serde = { version = "1", features = ["derive"] }
# Server
tokio = {version="1", default-features=false, features= ["rt-multi-thread", "sync"] }
axum = {version="0.7", default-features= false, features= ["tokio", "http2", "json", "macros"] }
# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
# Error
thiserror = "1.0"
axum_thiserror = "0.1"
anyhow = "1.0"
# response, either json (slower, more compatible) or bitcode (faster, rust client)
bitcode = {version="0.6", features=["serde"]}
url = {version="2.5", features=["serde"]}
# Miscs
derive_more = {version="0.99", default-features=false, features=["display"]}
enclose = "1.2"
cfg-if ="1.0"
strum = "0.26"
strum_macros = "0.26"

# DB
diesel = { version = "2.2", features = ["postgres"] }
dotenv = "0.15"
diesel_migrations = {version="2.2", features=["postgres"]}
deadpool-diesel = {version="0.6", features=["postgres"]}

[features]
default=[]
